kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          # envFrom:
          #   - secretRef:
          #       name: environment-variables
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  ports:
    - port: 80
  selector:
    app: ${APPLICATION_NAME}
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: 年休カレンダー
    gethomepage.dev/icon: https://gitlab.jtektrnd.net/uploads/-/system/project/avatar/328/calendar-beach-rounded-bg.png
    gethomepage.dev/group: 業務アプリ
    gethomepage.dev/pod-selector: app=annual-leave-calendar-gui
spec:
  rules:
    - host: leaves.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}-redirection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}-redirection
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}-redirection
    spec:
      containers:
        - name: ${APPLICATION_NAME}-redirection
          image: moreillon/redirection:c8ab3fdf
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}-redirection
spec:
  ports:
    - port: 80
      nodePort: 30515
  selector:
    app: ${APPLICATION_NAME}-redirection
  type: NodePort
